--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
   <!-- NAVBAR -->
   <nav>
     <div class="brand">
-      <img src="logo.png" alt="Barak LX Logo">
+      <img src="logoo.png" alt="Barak LX Logo">
       Barak LX
     </div>
     <ul>
