Insert logo image in header section
Added logo image to the logo space in the header.

--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
       object-fit: contain;
     }
 
+    .logo-space img {
+      width: 120px;
+      height: auto;
+      object-fit: contain;
+    }
+
     nav ul {
       display: flex;
       gap: 30px;
@@ -349,7 +355,9 @@
   <!-- HERO -->
   <header id="inicio">
     <div class="hero">
-      <div class="logo-space">ESPACIO PARA LOGOTIPO</div>
+      <div class="logo-space">
+        <img src="logoo.png" alt="Barak LX Logo">
+      </div>
       <h1>Inversiones y Variedades <span>Barak LX</span></h1>
       <p>Somos una empresa dedicada a la comercialización de cosméticos y productos de cuidado personal, combinando elegancia, calidad y confianza en cada detalle.</p>
       <div class="hero-actions">
