--- a/index.html
+++ b/index.html
@@ -390,28 +390,77 @@
       <p>Descubre nuestra variedad de cosméticos diseñados para realzar tu belleza natural.</p>
     </div>
 
-    <div class="products">
-      <div class="product-card" data-aos="fade-up" data-aos-delay="100">
-        <div class="product-image">Imagen del producto</div>
-        <h3>Nombre del producto</h3>
-        <p>Descripción detallada del cosmético, beneficios, tipo de piel y modo de uso.</p>
-        <a href="https://wa.me/50575473089" target="_blank" class="buy-btn">Adquirir ya</a>
-      </div>
+   ## Sección de Productos (7 productos desde la raíz)
 
-      <div class="product-card" data-aos="fade-up" data-aos-delay="200">
-        <div class="product-image">Imagen del producto</div>
-        <h3>Nombre del producto</h3>
-        <p>Descripción detallada del cosmético, beneficios, tipo de piel y modo de uso.</p>
-        <a href="https://wa.me/50575473089" target="_blank" class="buy-btn">Adquirir ya</a>
-      </div>
+Reemplaza **únicamente** el bloque `<div class="products">...</div>` por el siguiente código. No requiere carpetas ni cambios adicionales.
 
-      <div class="product-card" data-aos="fade-up" data-aos-delay="300">
-        <div class="product-image">Imagen del producto</div>
-        <h3>Nombre del producto</h3>
-        <p>Descripción detallada del cosmético, beneficios, tipo de piel y modo de uso.</p>
-        <a href="https://wa.me/50575473089" target="_blank" class="buy-btn">Adquirir ya</a>
-      </div>
+```html
+<div class="products">
+
+  <div class="product-card" data-aos="fade-up" data-aos-delay="100">
+    <div class="product-image">
+      <img src="aclarador.jpg" alt="Aclarador Facial Barak LX">
     </div>
+    <h3>Aclarador Facial</h3>
+    <p>Ayuda a unificar el tono de la piel, aportando luminosidad y frescura. Ideal para uso diario.</p>
+    <a href="https://wa.me/50575473089" target="_blank" class="buy-btn">Adquirir ya</a>
+  </div>
+
+  <div class="product-card" data-aos="fade-up" data-aos-delay="150">
+    <div class="product-image">
+      <img src="cremas.jpg" alt="Cremas Hidratantes Barak LX">
+    </div>
+    <h3>Cremas Hidratantes</h3>
+    <p>Hidratación profunda que protege y suaviza la piel, manteniéndola saludable y radiante.</p>
+    <a href="https://wa.me/50575473089" target="_blank" class="buy-btn">Adquirir ya</a>
+  </div>
+
+  <div class="product-card" data-aos="fade-up" data-aos-delay="200">
+    <div class="product-image">
+      <img src="naviforce.jpg" alt="Reloj Naviforce Barak LX">
+    </div>
+    <h3>Reloj Naviforce</h3>
+    <p>Estilo moderno y resistente. Perfecto para complementar tu imagen con elegancia.</p>
+    <a href="https://wa.me/50575473089" target="_blank" class="buy-btn">Adquirir ya</a>
+  </div>
+
+  <div class="product-card" data-aos="fade-up" data-aos-delay="250">
+    <div class="product-image">
+      <img src="protector.jpg" alt="Protector Solar Barak LX">
+    </div>
+    <h3>Protector Solar</h3>
+    <p>Protección efectiva contra los rayos UV, cuidando tu piel en todo momento.</p>
+    <a href="https://wa.me/50575473089" target="_blank" class="buy-btn">Adquirir ya</a>
+  </div>
+
+  <div class="product-card" data-aos="fade-up" data-aos-delay="300">
+    <div class="product-image">
+      <img src="reloj.jpg" alt="Reloj Premium Barak LX">
+    </div>
+    <h3>Reloj Premium</h3>
+    <p>Diseño sofisticado con acabados de alta calidad para un look distinguido.</p>
+    <a href="https://wa.me/50575473089" target="_blank" class="buy-btn">Adquirir ya</a>
+  </div>
+
+  <div class="product-card" data-aos="fade-up" data-aos-delay="350">
+    <div class="product-image">
+      <img src="retinol.jpg" alt="Retinol Facial Barak LX">
+    </div>
+    <h3>Retinol Facial</h3>
+    <p>Favorece la renovación celular, ayudando a mejorar la textura y firmeza de la piel.</p>
+    <a href="https://wa.me/50575473089" target="_blank" class="buy-btn">Adquirir ya</a>
+  </div>
+
+  <div class="product-card" data-aos="fade-up" data-aos-delay="400">
+    <div class="product-image">
+      <img src="skat.jpg" alt="Set de Cuidado Personal Barak LX">
+    </div>
+    <h3>Set de Cuidado Personal</h3>
+    <p>Combo ideal para el cuidado diario, práctico y efectivo para toda rutina personal.</p>
+    <a href="https://wa.me/50575473089" target="_blank" class="buy-btn">Adquirir ya</a>
+  </div>
+
+</div>
   </section>
 
   <!-- FOOTER -->
