--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-  <!-- AOS Animations -->
+  <!-- AOS -->
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
   <style>
@@ -16,7 +16,6 @@
       --gold: #c48a2c;
       --gold-light: #f0c36b;
       --dark: #0a0a0a;
-      --dark-soft: #141414;
       --white: #ffffff;
       --text-soft: #cccccc;
       --glass: rgba(255,255,255,0.08);
@@ -35,37 +34,18 @@
       overflow-x: hidden;
     }
 
-    /* ===================== GLOBAL ===================== */
     section {
       padding: 120px 8%;
     }
 
-    .btn-primary {
-      display: inline-block;
-      padding: 16px 45px;
-      border-radius: 50px;
-      background: linear-gradient(135deg, var(--gold), var(--gold-light));
-      color: #000;
-      font-weight: 800;
-      text-decoration: none;
-      letter-spacing: .5px;
-      box-shadow: 0 0 30px rgba(196,138,44,0.6);
-      transition: all .35s ease;
-    }
-
-    .btn-primary:hover {
-      transform: translateY(-6px) scale(1.03);
-      box-shadow: 0 0 50px rgba(196,138,44,0.9);
-    }
-
-    /* ===================== NAVBAR ===================== */
+    /* NAVBAR */
     nav {
       position: fixed;
       top: 0;
       width: 100%;
       z-index: 1000;
       padding: 20px 8%;
-      background: rgba(0,0,0,0.45);
+      background: rgba(0,0,0,0.55);
       backdrop-filter: blur(10px);
       display: flex;
       justify-content: space-between;
@@ -76,7 +56,7 @@
     nav .brand {
       display: flex;
       align-items: center;
-      gap: 15px;
+      gap: 14px;
       font-weight: 800;
       letter-spacing: 1px;
     }
@@ -87,41 +67,19 @@
       object-fit: contain;
     }
 
-    .logo-space img {
-      width: 120px;
-      height: auto;
-      object-fit: contain;
-    }
-
     nav ul {
+      list-style: none;
       display: flex;
       gap: 30px;
-      list-style: none;
     }
 
     nav ul li a {
       color: var(--white);
       text-decoration: none;
       font-weight: 500;
-      position: relative;
     }
 
-    nav ul li a::after {
-      content: "";
-      position: absolute;
-      bottom: -6px;
-      left: 0;
-      width: 0;
-      height: 2px;
-      background: var(--gold);
-      transition: width .3s ease;
-    }
-
-    nav ul li a:hover::after {
-      width: 100%;
-    }
-
-    /* ===================== HERO ===================== */
+    /* HERO */
     header {
       min-height: 100vh;
       display: flex;
@@ -143,7 +101,6 @@
       max-width: 1000px;
       position: relative;
       z-index: 1;
-      animation: fadeUp 1.5s ease;
     }
 
     .logo-space {
@@ -156,9 +113,11 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      color: var(--gold-light);
-      font-weight: 600;
-      font-size: .9rem;
+    }
+
+    .logo-space img {
+      width: 120px;
+      object-fit: contain;
     }
 
     .hero h1 {
@@ -172,52 +131,14 @@
     }
 
     .hero p {
-      margin: 25px auto 0;
-      max-width: 750px;
+      margin-top: 25px;
+      color: var(--text-soft);
       font-size: 1.15rem;
-      color: var(--text-soft);
+      max-width: 700px;
+      margin-inline: auto;
     }
 
-    .hero-actions {
-      margin-top: 55px;
-      display: flex;
-      justify-content: center;
-      gap: 25px;
-      flex-wrap: wrap;
-    }
-
-    /* ===================== ABOUT ===================== */
-    .about {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 80px;
-      align-items: center;
-    }
-
-    .about-box {
-      background: linear-gradient(145deg, rgba(255,255,255,0.06), rgba(255,255,255,0.01));
-      border-radius: 25px;
-      padding: 45px;
-      border: 1px solid rgba(255,255,255,0.08);
-      backdrop-filter: blur(12px);
-    }
-
-    .about-box h2 {
-      font-size: 2.6rem;
-      margin-bottom: 20px;
-    }
-
-    .about-box span {
-      color: var(--gold);
-    }
-
-    .about-box p {
-      color: var(--text-soft);
-      margin-bottom: 18px;
-      line-height: 1.8;
-    }
-
-    /* ===================== PRODUCTS ===================== */
+    /* PRODUCTS */
     .section-title {
       text-align: center;
       margin-bottom: 80px;
@@ -232,90 +153,71 @@
       color: var(--gold);
     }
 
-    .section-title p {
-      margin-top: 15px;
-      color: var(--text-soft);
-      max-width: 650px;
-      margin-inline: auto;
-    }
-
     .products {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 45px;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 40px;
     }
 
     .product-card {
-      background: linear-gradient(145deg, rgba(255,255,255,0.05), rgba(255,255,255,0.01));
-      border-radius: 25px;
-      padding: 35px;
+      background: linear-gradient(145deg, rgba(255,255,255,0.06), rgba(255,255,255,0.01));
+      border-radius: 24px;
+      padding: 30px;
+      text-align: center;
       border: 1px solid rgba(255,255,255,0.08);
-      backdrop-filter: blur(14px);
-      position: relative;
-      overflow: hidden;
-      transition: all .45s ease;
-    }
-
-    .product-card::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: linear-gradient(120deg, transparent, rgba(196,138,44,0.3), transparent);
-      opacity: 0;
-      transition: opacity .4s ease;
-    }
-
-    .product-card:hover::before {
-      opacity: 1;
+      transition: all .4s ease;
     }
 
     .product-card:hover {
-      transform: translateY(-14px);
-      box-shadow: 0 30px 70px rgba(0,0,0,0.7);
+      transform: translateY(-10px);
+      box-shadow: 0 25px 60px rgba(0,0,0,0.7);
     }
 
     .product-image {
-      height: 220px;
-      border-radius: 18px;
-      background: var(--glass);
-      border: 2px dashed var(--gold);
+      height: 200px;
+      margin-bottom: 22px;
       display: flex;
       align-items: center;
       justify-content: center;
-      color: var(--gold-light);
-      margin-bottom: 28px;
-      font-weight: 500;
+      background: rgba(255,255,255,0.03);
+      border-radius: 18px;
+      padding: 15px;
+    }
+
+    .product-image img {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
     }
 
     .product-card h3 {
-      font-size: 1.6rem;
-      font-weight: 700;
+      font-size: 1.4rem;
+      margin-bottom: 12px;
     }
 
     .product-card p {
-      margin: 15px 0 30px;
+      font-size: .95rem;
       color: var(--text-soft);
-      line-height: 1.7;
+      margin-bottom: 22px;
+      line-height: 1.6;
     }
 
     .buy-btn {
-      display: block;
-      text-align: center;
-      padding: 15px 0;
-      border-radius: 45px;
+      display: inline-block;
+      padding: 12px 40px;
+      border-radius: 40px;
       background: linear-gradient(135deg, var(--gold), var(--gold-light));
       color: #000;
       font-weight: 800;
       text-decoration: none;
-      transition: all .35s ease;
+      transition: transform .3s ease;
     }
 
     .buy-btn:hover {
       transform: scale(1.05);
-      box-shadow: 0 0 35px rgba(196,138,44,0.8);
     }
 
-    /* ===================== FOOTER ===================== */
+    /* FOOTER */
     footer {
       padding: 60px 20px;
       text-align: center;
@@ -326,16 +228,10 @@
     footer p {
       color: #aaa;
       font-size: .95rem;
-      line-height: 1.7;
-    }
-
-    /* ===================== ANIMATIONS ===================== */
-    @keyframes fadeUp {
-      from { opacity: 0; transform: translateY(45px); }
-      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
+
 <body>
 
   <!-- NAVBAR -->
@@ -346,7 +242,6 @@
     </div>
     <ul>
       <li><a href="#inicio">Inicio</a></li>
-      <li><a href="#nosotros">Nosotros</a></li>
       <li><a href="#productos">Productos</a></li>
       <li><a href="https://wa.me/50575473089" target="_blank">Contacto</a></li>
     </ul>
@@ -359,120 +254,76 @@
         <img src="logoo.png" alt="Barak LX Logo">
       </div>
       <h1>Inversiones y Variedades <span>Barak LX</span></h1>
-      <p>Somos una empresa dedicada a la comercialización de cosméticos y productos de cuidado personal, combinando elegancia, calidad y confianza en cada detalle.</p>
-      <div class="hero-actions">
-        <a href="#productos" class="btn-primary">Ver catálogo</a>
-        <a href="https://wa.me/50575473089" target="_blank" class="btn-primary">Comprar por WhatsApp</a>
-      </div>
+      <p>Cosméticos y productos de cuidado personal con una presentación elegante, moderna y confiable.</p>
     </div>
   </header>
 
-  <!-- ABOUT -->
-  <section id="nosotros">
-    <div class="about" data-aos="fade-up">
-      <div class="about-box">
-        <h2>Nuestra <span>Esencia</span></h2>
-        <p>En Barak LX creemos que la belleza es una expresión de confianza, bienestar y amor propio. Por eso seleccionamos cuidadosamente cada producto que ofrecemos.</p>
-        <p>Nuestro compromiso es brindar cosméticos confiables, modernos y accesibles, respaldados por una atención personalizada y profesional.</p>
-      </div>
-      <div class="about-box">
-        <h2>Visión & <span>Calidad</span></h2>
-        <p>Aspiramos a posicionarnos como una marca referente en el mercado nacional, destacándonos por nuestra presentación premium y nuestra ética de trabajo.</p>
-        <p>Cada cliente es una prioridad, y cada compra representa una experiencia de excelencia.</p>
-      </div>
-    </div>
-  </section>
-
   <!-- PRODUCTS -->
   <section id="productos">
-    <div class="section-title" data-aos="fade-up">
+    <div class="section-title">
       <h2>Catálogo de <span>Productos</span></h2>
-      <p>Descubre nuestra variedad de cosméticos diseñados para realzar tu belleza natural.</p>
     </div>
 
-   ## Sección de Productos (7 productos desde la raíz)
+    <div class="products">
+      <div class="product-card">
+        <div class="product-image"><img src="aclarador.jpg"></div>
+        <h3>Aclarador Facial</h3>
+        <p>Ayuda a unificar el tono de la piel y aporta luminosidad natural.</p>
+        <a class="buy-btn" href="https://wa.me/50575473089">Adquirir</a>
+      </div>
 
-Reemplaza **únicamente** el bloque `<div class="products">...</div>` por el siguiente código. No requiere carpetas ni cambios adicionales.
+      <div class="product-card">
+        <div class="product-image"><img src="cremas.jpg"></div>
+        <h3>Cremas Hidratantes</h3>
+        <p>Hidratación profunda que mantiene la piel suave y protegida.</p>
+        <a class="buy-btn" href="https://wa.me/50575473089">Adquirir</a>
+      </div>
 
-```html
-<div class="products">
+      <div class="product-card">
+        <div class="product-image"><img src="naviforce.jpg"></div>
+        <h3>Reloj Naviforce</h3>
+        <p>Estilo moderno y resistente para un look elegante.</p>
+        <a class="buy-btn" href="https://wa.me/50575473089">Adquirir</a>
+      </div>
 
-  <div class="product-card" data-aos="fade-up" data-aos-delay="100">
-    <div class="product-image">
-      <img src="aclarador.jpg" alt="Aclarador Facial Barak LX">
+      <div class="product-card">
+        <div class="product-image"><img src="protector.jpg"></div>
+        <h3>Protector Solar</h3>
+        <p>Protección eficaz contra los rayos UV para el cuidado diario.</p>
+        <a class="buy-btn" href="https://wa.me/50575473089">Adquirir</a>
+      </div>
+
+      <div class="product-card">
+        <div class="product-image"><img src="reloj.jpg"></div>
+        <h3>Reloj Premium</h3>
+        <p>Diseño sofisticado con acabados de alta calidad.</p>
+        <a class="buy-btn" href="https://wa.me/50575473089">Adquirir</a>
+      </div>
+
+      <div class="product-card">
+        <div class="product-image"><img src="retinol.jpg"></div>
+        <h3>Retinol Facial</h3>
+        <p>Favorece la renovación celular y mejora la textura de la piel.</p>
+        <a class="buy-btn" href="https://wa.me/50575473089">Adquirir</a>
+      </div>
+
+      <div class="product-card">
+        <div class="product-image"><img src="skat.jpg"></div>
+        <h3>Set de Cuidado Personal</h3>
+        <p>Rutina completa para el cuidado diario de la piel.</p>
+        <a class="buy-btn" href="https://wa.me/50575473089">Adquirir</a>
+      </div>
     </div>
-    <h3>Aclarador Facial</h3>
-    <p>Ayuda a unificar el tono de la piel, aportando luminosidad y frescura. Ideal para uso diario.</p>
-    <a href="https://wa.me/50575473089" target="_blank" class="buy-btn">Adquirir ya</a>
-  </div>
-
-  <div class="product-card" data-aos="fade-up" data-aos-delay="150">
-    <div class="product-image">
-      <img src="cremas.jpg" alt="Cremas Hidratantes Barak LX">
-    </div>
-    <h3>Cremas Hidratantes</h3>
-    <p>Hidratación profunda que protege y suaviza la piel, manteniéndola saludable y radiante.</p>
-    <a href="https://wa.me/50575473089" target="_blank" class="buy-btn">Adquirir ya</a>
-  </div>
-
-  <div class="product-card" data-aos="fade-up" data-aos-delay="200">
-    <div class="product-image">
-      <img src="naviforce.jpg" alt="Reloj Naviforce Barak LX">
-    </div>
-    <h3>Reloj Naviforce</h3>
-    <p>Estilo moderno y resistente. Perfecto para complementar tu imagen con elegancia.</p>
-    <a href="https://wa.me/50575473089" target="_blank" class="buy-btn">Adquirir ya</a>
-  </div>
-
-  <div class="product-card" data-aos="fade-up" data-aos-delay="250">
-    <div class="product-image">
-      <img src="protector.jpg" alt="Protector Solar Barak LX">
-    </div>
-    <h3>Protector Solar</h3>
-    <p>Protección efectiva contra los rayos UV, cuidando tu piel en todo momento.</p>
-    <a href="https://wa.me/50575473089" target="_blank" class="buy-btn">Adquirir ya</a>
-  </div>
-
-  <div class="product-card" data-aos="fade-up" data-aos-delay="300">
-    <div class="product-image">
-      <img src="reloj.jpg" alt="Reloj Premium Barak LX">
-    </div>
-    <h3>Reloj Premium</h3>
-    <p>Diseño sofisticado con acabados de alta calidad para un look distinguido.</p>
-    <a href="https://wa.me/50575473089" target="_blank" class="buy-btn">Adquirir ya</a>
-  </div>
-
-  <div class="product-card" data-aos="fade-up" data-aos-delay="350">
-    <div class="product-image">
-      <img src="retinol.jpg" alt="Retinol Facial Barak LX">
-    </div>
-    <h3>Retinol Facial</h3>
-    <p>Favorece la renovación celular, ayudando a mejorar la textura y firmeza de la piel.</p>
-    <a href="https://wa.me/50575473089" target="_blank" class="buy-btn">Adquirir ya</a>
-  </div>
-
-  <div class="product-card" data-aos="fade-up" data-aos-delay="400">
-    <div class="product-image">
-      <img src="skat.jpg" alt="Set de Cuidado Personal Barak LX">
-    </div>
-    <h3>Set de Cuidado Personal</h3>
-    <p>Combo ideal para el cuidado diario, práctico y efectivo para toda rutina personal.</p>
-    <a href="https://wa.me/50575473089" target="_blank" class="buy-btn">Adquirir ya</a>
-  </div>
-
-</div>
   </section>
 
   <!-- FOOTER -->
   <footer>
-    <p>© 2025 Inversiones y Variedades Barak LX<br>Cosméticos · Belleza · Confianza</p>
+    <p>© 2025 Inversiones y Variedades Barak LX · Cosméticos · Belleza · Confianza</p>
   </footer>
 
-  <!-- AOS -->
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script>
-    AOS.init({ duration: 1300, once: true });
-  </script>
+  <script>AOS.init({ duration: 1200, once: true });</script>
 
 </body>
 </html>
+
